 * The homepage created in the project template is now titled "Home" rather than "Homepage" (Karl Hobley)
 * Signal receivers for custom `Image` and `Rendition` models are connected automatically (Mike Dingjan)
 * `PageChooserBlock` can now accept a list/tuple of page models as `target_model` (Mikalai Radchuk)
 * Fix: Marked 'Date from' / 'Date to' strings in wagtailforms for translation (Vorlif)
 * Fix: Unreliable preview is now reliable by always opening in a new window (Kjartan Sverrisson)
 * Fix: Fixed placement of `{{ block.super }}` in `snippets/type_index.html` (LB (Ben Johnston))
 * Fix: Optimised database queries on group edit page (Ashia Zawaduk)


1.9 (16.02.2017)
~~~~~~~~~~~~~~~~

 * Added support for comparing page revisions (Karl Hobley, Janneke Janssen, Matt Westcott)
 * Added support for many-to-many relations on page models (Thejaswi Puthraya, Matt Westcott)
 * Form builder form submissions can now be bulk-deleted (Karl Hobley)
 * `get_context` methods on StreamField blocks can now access variables from the parent context (Mikael Svensson, Peter Baumgartner)
 * Updated admin dashboard welcome message for multi-tenanted installations (Jeffrey Chau)
 * Changed text of "Draft" and "Live" buttons to "View draft" and "View live" (Dan Braghis)
 * Added `get_api_representation` method to streamfield blocks allowing the JSON representation in the API to be customised (Marco Fucci)
 * Added `before_copy_page` and `after_copy_page` hooks (Matheus Bratfisch)
 * View live / draft links in the admin now consistently open in a new window (Marco Fucci)
 * `ChoiceBlock` now omits the blank option if the block is required and has a default value (Andreas Nüßlein)
 * The `add_subpage` view now maintains a `next` URL parameter to specify where to redirect to after completing page creation (Robert Rollins)
 * The `wagtailforms` module now allows to define custom form submission model, add custom data to CSV export and some other customisations (Mikalai Radchuk)