@@ -1,28 +1,41 @@
+@import 'wagtailadmin/scss/variables';
+
 .content header {
     margin-bottom: 0;
 }
 
 
 .result-list {
-    padding: 0 15px;
+    margin-bottom: 0;
+}
 
-    table {
-        margin-bottom: 0;
-    }
+.listing {
 
-    body th {
-        background-color: transparent;
-        text-align: left;
-        padding: 1.2em 1em;
-    }
-
-    tbody tr:hover ul.actions {
-        visibility: visible;
-    }
-
-    tbody td,
-    tbody th {
+    td,
+    th {
         vertical-align: top;
+    }
+
+    thead th.sorted a {
+        color: $color-teal;
+    }
+
+    tbody {
+        overflow: auto;
+
+        tr:hover ul.actions {
+            visibility: visible;
+        }
+
+        tr > td { 
+            background-color: inherit;
+            
+            a.edit-obj { 
+                color: inherit;
+                font-weight: 600; 
+            }
+        }
+
     }
 }
 
@@ -133,14 +146,18 @@ p.no-results {
 
     .result-list {
         padding: 0 1.5% 0 0;
-    }
 
-    .result-list tbody th:first-child {
-        padding-left: 50px;
-    }
+        &.col12 {
+            padding-right: 0;
 
-    .result-list.col12 tbody td:last-child {
-        padding-right: 50px;
+            tbody td:last-child {
+                padding-right: 50px;
+            }
+        }
+
+        tbody th:first-child {
+            padding-left: 50px;
+        }
     }
 
     div.pagination {
